--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ p.text-blue {
 .waiter {
   position: absolute;
   top: 4.5rem;
-  /* using calc medthod the  waiter icon will change position based on viewport width size */
+  /* using the calc medthod the  waiter icon will change position based on viewport width size */
   left: calc(100vw - 64%);
 }
 
@@ -157,7 +157,7 @@ p.text-blue {
 }
 
 /* This rule gives the contact button "last-child" .313rem of right margin. 
-This preventa the button from being right against the header banner  */
+This prevents the button from being right up against the header banner  */
 .nav li:last-child {
   margin-right: 0.313rem;
 }
@@ -272,7 +272,8 @@ a.icon {
   margin: 0 auto;
 }
 
-.col {
+.col,
+.menu-picture-col {
   padding-right: 0.5rem;
   padding-left: 0.5rem;
   padding-bottom: 1.5rem;
@@ -381,7 +382,8 @@ Flexbox Layout Mobile
 .header,
 .nav,
 .row,
-.col {
+.col,
+.menu-picture-col {
   display: flex;
   flex-direction: column;
 }
@@ -428,12 +430,12 @@ viewport width is equal to or narrower than 702px: */
     border-radius: 5px;
     transition: 400ms ease-in-out;
   }
-  /* the class responsive is controlled by javascript when the hamburger is onclicked */
-  .nav.responsive {
+  /* the class navControl is controlled by javascript when the hamburger is onclicked */
+  .nav.navControl {
     display: none;
   }
-  /* the class responsiveB is controlled by javascript when the hamburger is onclicked */
-  .waiter.responsiveB {
+  /* the class waiterControl is controlled by javascript when the hamburger is onclicked */
+  .waiter.waiterControl {
     display: none;
   }
   .main-images {
@@ -444,12 +446,12 @@ viewport width is equal to or narrower than 702px: */
     display: none;
   }
 
-  .col-top {
+  .about-section-top {
     margin-top: 22rem;
   }
 
-  /* The class responsiveA is controlled by javascript when hamburger is onclicked */
-  .col-top.responsiveA {
+  /* The class aboutSectionControl is controlled by javascript when hamburger is onclicked */
+  .about-section-top.aboutSectionControl {
     margin-top: 11rem;
   }
 
@@ -512,6 +514,7 @@ viewport width is equal to or wider than 703px:*/
     justify-content: flex-start;
     /* border-bottom: 1px solid rgb(167, 165, 165); */
   }
+
   .about-section-picture {
     width: 33.33%;
   }
@@ -524,14 +527,16 @@ viewport width is equal to or wider than 703px:*/
   .about-section-content-picture {
     width: 33.33%;
   }
-
+  .menu-picture-col {
+    justify-content: center;
+  }
   .menu-section-content {
-    width: 50%;
+    width: 70%;
     order: 1;
   }
 
   .menu-section-content-picture {
-    width: 50%;
+    width: 30%;
   }
 
   .banner-section {
@@ -549,7 +554,7 @@ viewport width is equal to or wider than 703px:*/
 
 /* Target a viewport range wider than 701px and narrower than 992px 
 This CSS will apply styles only if your browser's 
-viewport width is equal to or wider than 701px:
+viewport width is equal to or wider than 701px
 AND equal to or narrower than 991px:*/
 
 @media (max-width: 992px) and (min-width: 701px) {
@@ -594,12 +599,12 @@ viewport width is equal to or wider than 1030pxpx:*/
   }
 
   .menu-section-content {
-    flex: 60%;
+    width: 70%;
     order: -1;
   }
 
   .menu-section-content-picture {
-    flex: 40%;
+    width: 30%;
   }
 
   .banner-section {
